# shim

./: Cargo.toml  README.md  TODO.md  flake.nix  git-shim  treefmt.nix
src/: app.rs  main.rs  shim.rs
